==> Embedfire-sensor/ebf_sensor_as608/2-STM32系列配套程序/F407_骄阳开发板/User/as608/bsp_as608.c <==
#include "stm32f4xx.h"
#include "./as608/bsp_as608.h"
#include "./usart/rx_data_queue.h"
#include "./delay/core_delay.h"
#include "./led/bsp_led.h"

void AS608_Config(void)
{
	GPIO_InitTypeDef  GPIO_InitStruct;

  AS608_TouchOut_INT_GPIO_CLK();
  AS608_USART_CLK();
  AS608_USART_TX_GPIO_CLK(); 
	AS608_USART_RX_GPIO_CLK();   
	
	/* TouchOut线用到的GPIO */	
  GPIO_InitStruct.Pin = AS608_TouchOut_INT_GPIO_PIN;
  /* 配置为输入 */	
  GPIO_InitStruct.Mode = GPIO_MODE_IT_RISING_FALLING;
  /* 设置引脚不上拉也不下拉 */
  GPIO_InitStruct.Pull = GPIO_NOPULL;
	/* 使用上面的结构体初始化 */
  HAL_GPIO_Init(AS608_TouchOut_INT_GPIO_PORT, &GPIO_InitStruct);
	/* 配置 EXTI 中断源 到对应引脚、配置中断优先级*/
	HAL_NVIC_SetPriority(AS608_TouchOut_INT_EXTI_IRQ, 2, 0);
	/* 使能中断 */
	HAL_NVIC_EnableIRQ(AS608_TouchOut_INT_EXTI_IRQ);

	
/* 配置Tx引脚为复用功能  */
	GPIO_InitStruct.Pin = AS608_USART_TX_PIN;
	GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
	GPIO_InitStruct.Pull = GPIO_PULLUP;
	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
	GPIO_InitStruct.Alternate = AS608_USART_TX_AF;
	HAL_GPIO_Init(AS608_USART_TX_GPIO_PORT, &GPIO_InitStruct);
	
	/* 配置Rx引脚为复用功能 */
	GPIO_InitStruct.Pin = AS608_USART_RX_PIN;
	GPIO_InitStruct.Alternate = AS608_USART_RX_AF;
	HAL_GPIO_Init(AS608_USART_RX_GPIO_PORT, &GPIO_InitStruct); 
	
	/* 配置串DEBUG_USART 模式 */
	AS608_UartHandle.Instance = AS608_USART;
	AS608_UartHandle.Init.BaudRate = AS608_USART_BAUDRATE;
	AS608_UartHandle.Init.WordLength = UART_WORDLENGTH_8B;
	AS608_UartHandle.Init.StopBits = UART_STOPBITS_1;
	AS608_UartHandle.Init.Parity = UART_PARITY_NONE;
	AS608_UartHandle.Init.Mode = UART_MODE_TX_RX;
	AS608_UartHandle.Init.HwFlowCtl = UART_HWCONTROL_NONE;
	HAL_UART_Init(&AS608_UartHandle);
	
  /*串口1中断初始化 */
  HAL_NVIC_SetPriority(AS608_USART_IRQ, 0, 0);
  HAL_NVIC_EnableIRQ(AS608_USART_IRQ);
  /*配置串口接收中断和串口总线空闲中断*/
  __HAL_UART_ENABLE_IT(&AS608_UartHandle,UART_IT_RXNE|USART_IT_IDLE);  
}

static  void AS608_SendData(uint8_t data)
{
  HAL_UART_Transmit(&AS608_UartHandle,(uint8_t *)&data, 1, 1000);
}

uint16_t  ReturnFlag( uint16_t *i)
{

   uint8_t rx_data[20];
   Read_RingBuff(rx_data);
   *i=(uint16_t)receive_data[9];     /*确认码*/
	 return *i;
 }

uint16_t PS_Connect(uint32_t *PS_Addr)
{
	uint8_t rx_data[20]; 
	AS608_PackHead();
	AS608_SendData(0x01);
	AS608_SendData(0x00);
	AS608_SendData(0x00);
  HAL_Delay(100);
	
	 /*从缓冲区读取数据，进行处理*/ 
	Read_RingBuff(rx_data); 

	/*判断是不是模块返回的应答包*/	
	if(rx_data[0]	== 0XEF && rx_data[1]==0X01 && rx_data[2]==0Xff)
   						
		{
				AS608_INFO("指纹模块的地址为:0x%x%x%x%x\r\n",rx_data[2],rx_data[3],rx_data[4],rx_data[5]);	
				return 0;	
		}
  return 1;		
}
