==> Csy22079/stm32STM32F103C8T6/User/bsp_as608.c <==
#include "bsp_as608.h"
#include "rx_data_queue.h"
#include "sys.h"
#include "bsp_usart3.h"
#define AS608_DELAY_MS(x)     delay_ms(x)

void AS608_Config(void)
{
	GPIO_InitTypeDef GPIO_InitStructure; 
//	EXTI_InitTypeDef EXTI_InitStructure;
  USART_InitTypeDef USART_InitStructure;
  
	/*开启串口GPIO口的时钟*/
//	RCC_APB2PeriphClockCmd(AS608_TouchOut_INT_GPIO_CLK,ENABLE);
  AS608_USART_GPIO_APBxClkCmd(AS608_USART_GPIO_CLK, ENABLE);
  /*打开串口外设的时钟*/
	AS608_USART_APBxClkCmd(AS608_USART_CLK, ENABLE);
												
	/* 配置 NVIC 中断*/
	NVIC_Configuration();
  
//	/* TouchOut线用到的GPIO */	
//  GPIO_InitStructure.GPIO_Pin = AS608_TouchOut_INT_GPIO_PIN;
//  /* 配置为浮空输入 */	
//  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
//  GPIO_Init(AS608_TouchOut_INT_GPIO_PORT, &GPIO_InitStructure);

//	/* 选择EXTI的信号源 */
//  GPIO_EXTILineConfig(AS608_TouchOut_INT_EXTI_PORTSOURCE, AS608_TouchOut_INT_EXTI_PINSOURCE); 
//  EXTI_InitStructure.EXTI_Line = AS608_TouchOut_INT_EXTI_LINE;
//	
//	/* EXTI为中断模式 */
//  EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;
//	/* 上升/下降沿中断 */
//  EXTI_InitStructure.EXTI_Trigger =EXTI_Trigger_Rising_Falling;
//  /* 使能中断 */	
//  EXTI_InitStructure.EXTI_LineCmd = ENABLE;
//  EXTI_Init(&EXTI_InitStructure);
//  
  /*将USART Tx的GPIO配置为推挽复用模式*/
  GPIO_InitStructure.GPIO_Pin = AS608_USART_TX_GPIO_PIN;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(AS608_USART_TX_GPIO_PORT, &GPIO_InitStructure);

  /*将USART Rx的GPIO配置为浮空输入模式*/
	GPIO_InitStructure.GPIO_Pin = AS608_USART_RX_GPIO_PIN;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
	GPIO_Init(AS608_USART_RX_GPIO_PORT, &GPIO_InitStructure);
	
	/*配置串口的工作参数*/
	/*配置波特率*/
	USART_InitStructure.USART_BaudRate = AS608_USART_BAUDRATE;
	/*配置 针数据字长*/
	USART_InitStructure.USART_WordLength = USART_WordLength_8b;
	/*配置停止位*/
	USART_InitStructure.USART_StopBits = USART_StopBits_1;
	/*配置校验位*/
	USART_InitStructure.USART_Parity = USART_Parity_No ;
	/*配置硬件流控制*/
	USART_InitStructure.USART_HardwareFlowControl = 
	                                USART_HardwareFlowControl_None;
	/*配置工作模式，收发一起*/
	USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;
	/*完成串口的初始化配置*/
	USART_Init(AS608_USART, &USART_InitStructure);
	
	/*使能串口接收中断*/
	USART_ITConfig(AS608_USART, USART_IT_RXNE, ENABLE);	
	USART_ITConfig(AS608_USART, USART_IT_IDLE, ENABLE ); //使能串口总线空闲中断 	
	
	/*使能串口*/
	USART_Cmd(AS608_USART, ENABLE);	
 	
}

static void AS608_SendData(uint8_t data)
{
  USART_SendData(AS608_USART,data);
  while(USART_GetFlagStatus(AS608_USART,USART_FLAG_TXE) == RESET);
}

uint16_t  ReturnFlag( uint16_t *i)
{
   QUEUE_DATA_TYPE *rx_data;
  
   rx_data = cbRead(&rx_queue);  /*从缓冲区读取数据，进行处理*/
    
   if(rx_data != NULL)           /*缓冲队列非空*/
  { 
		/*打印环行接收到的数据*/
    QUEUE_DEBUG_ARRAY((uint8_t*)rx_data->head,rx_data->len);
		
    *i=((uint16_t)(*(rx_data->head+9)));     /*确认码*/
		
	  cbReadFinish(&rx_queue);    /*使用完数据必须调用cbReadFinish更新读指针*/
	  
		return *i;
  }
	else
  {	
	  *i=0xff;
		
	  return *i;
  }
}

uint16_t PS_Connect(uint32_t *PS_Addr)
{
	QUEUE_DATA_TYPE *rx_data;	
	
	AS608_PackHead();
	AS608_SendData(0X01);
	AS608_SendData(0X00);
	AS608_SendData(0X00);
	
  AS608_DELAY_MS(100);
	
	rx_data = cbRead(&rx_queue);  /*从缓冲区读取数据，进行处理*/ 
	if(rx_data != NULL)           /*缓冲队列非空*/
	{ 
		/*打印环行接收到的数据*/
		QUEUE_DEBUG_ARRAY((uint8_t*)rx_data->head,rx_data->len);
		
		if(/*判断是不是模块返回的应答包*/
   			*(rx_data->head)	== 0XEF
				  && *(rx_data->head+1)==0X01
				  && *(rx_data->head+6)==0X07)  
		  {
			AS608_INFO("指纹模块的地址为:0x%x%x%x%x\r\n",*(rx_data->head+2),
																						      *(rx_data->head+3),
																						      *(rx_data->head+4),
																					   	    *(rx_data->head+5));
		  }
			cbReadFinish(&rx_queue);  /*使用完数据必须调用cbReadFinish更新读指针*/
		  
			return 0;	
	}	
	
  return 1;		
}
